--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -13,9 +13,11 @@
       <div>
         <h4 class="font-semibold mb-4">Enlaces</h4>
         <ul class="space-y-2 text-gray-300">
-          <li><a href="/" class="hover:text-cyan transition-colors">Inicio</a></li>
-          <li><a href="/servicios" class="hover:text-cyan transition-colors">Servicios</a></li>
-          <li><a href="/cotizar" class="hover:text-cyan transition-colors">Cotizar</a></li>
+          <li><a routerLink="/" class="hover:text-cyan transition-colors">Inicio</a></li>
+          <li><a routerLink="/servicios" class="hover:text-cyan transition-colors">Servicios</a></li>
+          <li><a routerLink="/cotizar" class="hover:text-cyan transition-colors">Cotizar</a></li>
+          <li><a routerLink="/rastreo" class="hover:text-cyan transition-colors">Rastreo</a></li>
+          <li><a routerLink="/viajes" class="hover:text-cyan transition-colors">Viajes</a></li>
         </ul>
       </div>
     </div>
